crates/aura-terminal/tests/ui/local_owner_without_owner.rs
use std::sync::Arc;

use aura_terminal::tui::callbacks::AddDeviceCallback;

fn main() {
    let _: AddDeviceCallback =
        Arc::new(|_nickname: String, _authority_id: aura_core::AuthorityId| {});
}
